Added Previous and Next buttons

--- a/youthtransition/pages/ya-criminaljusticesystem.html
+++ b/youthtransition/pages/ya-criminaljusticesystem.html
@@ -123,7 +123,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./ya-relationships.html">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
-                                    Relationahips
+                                    Relationships
                                 </a>
                             </li>
                             <li class="nav-item active">
@@ -469,7 +469,21 @@
                             </div> <!-- form-row -->
                             <hr/>
 
-                            <button type="submit" class="btn btn-primary float-right" href="./YA_Housing.html">Next</button>
+                            <a class="btn btn-outline-primary float-left" href="./ya-relationships.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Previous: Relationships
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Life Skills</button>
+                            -->
+                            <a class="btn btn-outline-primary float-right" href="./ya-lifeskills.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Next: Life Skills
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Life Skills</button>
+                            -->
+
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
