--- a/youthtransition/pages/ya-demographics.html
+++ b/youthtransition/pages/ya-demographics.html
@@ -123,7 +123,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./ya-relationships">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
-                                    Relationahips
+                                    Relationships
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -534,7 +534,13 @@
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
-                            <button type="submit" class="btn btn-primary float-right" href="./YA_Housing.html">Next</button>
+                            <a class="btn btn-outline-primary float-right" href="./ya-housing.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Next: Housing
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            -->
                         </form>
                     </div>
                         <!-- #EndLibraryItem -->
