--- a/youthtransition/pages/ya-employment.html
+++ b/youthtransition/pages/ya-employment.html
@@ -123,7 +123,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./ya-relationships.html">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
-                                    Relationahips
+                                    Relationships
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -507,7 +507,21 @@
                             <hr/>
 
                             <hr/>
-                            <button type="submit" class="btn btn-primary float-right" href="./YA_Housing.html">Next</button>
+
+                            <a class="btn btn-outline-primary float-left" href="./ya-education.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Previous: Education
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Education</button>
+                            -->
+                            <a class="btn btn-outline-primary float-right" href="./ya-socialinterests.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Next: Social Interests
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Social Interests</button>
+                            -->
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
