--- a/youthtransition/pages/ya-pregnantparenting.html
+++ b/youthtransition/pages/ya-pregnantparenting.html
@@ -123,7 +123,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./ya-relationships.html">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
-                                    Relationahips
+                                    Relationships
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -289,7 +289,20 @@
                             </div> <!-- form-row -->
                             <hr/>
 
-                            <button type="submit" class="btn btn-primary float-right" href="./YA_Housing.html">Next</button>
+                            <a class="btn btn-outline-primary float-left" href="./ya-placementandsafety.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Previous: Placement & Safety
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            -->
+                            <a class="btn btn-outline-primary float-right" href="./ya-health.html">
+                                <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
+                                Next: Health
+                            </a>
+                            <!-- ***Note: the above link is just for html demo below is for submission to Angular
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Health</button>
+                            -->
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
