--- a/youthtransition/pages/ya-receiveddocuments.html
+++ b/youthtransition/pages/ya-receiveddocuments.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Youth Appraisal Health</title>
+    <title>Youth Appraisal Received Documents</title>
 
     <!-- Bootstrap Core -->
 
@@ -114,7 +114,7 @@
                                     Pregnant / Parenting
                                 </a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="./ya-health.html">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
                                     Health
@@ -162,7 +162,7 @@
                                     Goals and Actions
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="./ya-receiveddocuments.html">
                                     <!--<i class="fa fa-user fa-fw" style="font-size: 20px;"></i>-->
                                     Received Documents
@@ -224,35 +224,171 @@
                 </div>
                 <div class="card d-flex">
                     <div class="card-header">
-                        <h4 class="text-center">Health</h4>
+                        <h4 class="text-center">Received Documents</h4>
                     </div>
                     <div class="card-body">
-                        <form [formGroup]="healthForm" (ngSubmit)="onNext()">
+                        <form [formGroup]="receiveddocumentsForm" (ngSubmit)="onNext()">
                             <div class="row">
-                                <div class="col-12">
-                                     <label for="demographics_phone">Do you have any medical issues to address?</label>
-                                     <input type="tel" class="form-control"
-                                            id="placementandsafety.whychangedplacements" formControlName="whychangedplacements"
-                                               placeholder="Medical Issues?">
+                                <div class="col-12 col-md-6">
+                                    <label class="col-form-label">Please indicate which of the following skills apply?</label>
+                                    <fieldset class="form-group">
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="01"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to use my email account
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="02"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can make meals without using a recipe
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="03"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to do my own laundry
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="04"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can get medical and dental care when I need it
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="05"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I bathe daily
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="06"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I brush my teeth daily
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="07"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to get myself away from harmful situations
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="08"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can speak up for myself
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="09"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know the signs of an abusive relationship
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="10"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can deal with anger without hurting myself or others
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="11"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to balance my bank account
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="12"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to develop a budget
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="13"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to create a resume
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="14"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can complete a job application
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label ">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="15"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to prepare for a job interview
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="16"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I can describe my vision for myself
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input"
+                                                       name="lifeSkills" value="17"
+                                                       formControlName="lifeSkills"> &nbsp;
+                                                &nbsp;I know how to drive
+                                            </label>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                                <div class="col-12 col-md-6 pt-2 pt-md-0">
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
 
-                            <a class="btn btn-outline-primary float-left" href="./ya-pregnantparenting.html">
+                            <a class="btn btn-outline-primary float-left" href="./ya-goalsandactions.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
-                                Previous: Pregnant Parenting
+                                Previous: Goals & Actions
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Pregnant Parenting</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Goals & Actions</button>
                             -->
-                            <a class="btn btn-outline-primary float-right" href="./ya-relationships.html">
+                            <a class="btn btn-outline-primary float-right" href="./ya-reviewandsign.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
-                                Next: Relationships
+                                Next: Review & Sign
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Relationships</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Stipends</button>
                             -->
-
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
