--- a/youthtransition/pages/ya-continuingsupportservices.html
+++ b/youthtransition/pages/ya-continuingsupportservices.html
@@ -329,14 +329,18 @@
                                 Previous: Stipends
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Stipends</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Stipends
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-personal.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Personal
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Personal</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Personal
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
