--- a/youthtransition/pages/ya-criminaljusticesystem.html
+++ b/youthtransition/pages/ya-criminaljusticesystem.html
@@ -474,14 +474,18 @@
                                 Previous: Relationships
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Life Skills</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Relationships
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-lifeskills.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Life Skills
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Life Skills</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Life Skills
+                            </button>
                             -->
 
                         </form>
