--- a/youthtransition/pages/ya-demographics.html
+++ b/youthtransition/pages/ya-demographics.html
@@ -534,12 +534,15 @@
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
+
                             <a class="btn btn-outline-primary float-right" href="./ya-housing.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Housing
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Housing
+                            </button>
                             -->
                         </form>
                     </div>
