--- a/youthtransition/pages/ya-education.html
+++ b/youthtransition/pages/ya-education.html
@@ -645,14 +645,18 @@
                                     Previous: Housing
                                 </a>
                                 <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                                <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                                <button type="submit" class="btn btn-outline-primary float-right" >
+                                    Previous: Housing
+                                </button>
                                 -->
                                 <a class="btn btn-outline-primary float-right" href="./ya-employment.html">
                                     <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                     Next: Employment
                                 </a>
                                 <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                                <button type="submit" class="btn btn-outline-primary float-right" >Next: Employment</button>
+                                <button type="submit" class="btn btn-outline-primary float-right" >
+                                    Next: Employment
+                                </button>
                                 -->
                         </form>
                         <!-- #EndLibraryItem -->
