--- a/youthtransition/pages/ya-employment.html
+++ b/youthtransition/pages/ya-employment.html
@@ -513,14 +513,18 @@
                                 Previous: Education
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Education</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Education
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-socialinterests.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Social Interests
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Social Interests</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Social Interests
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
