--- a/youthtransition/pages/ya-goalsandactions.html
+++ b/youthtransition/pages/ya-goalsandactions.html
@@ -330,16 +330,19 @@
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
                             <button type="submit" class="btn btn-outline-primary float-right" >
-                                Next: Personal
+                                Previous: Personal
                             </button>
                             -->
-                            <a class="btn btn-outline-primary float-right" href="./ya-rec">
+                            <a class="btn btn-outline-primary float-right" href="./ya-receiveddocuments.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
-                                Next: Stipends
+                                Next: Received Documents
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Stipends</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Received Documents
+                            </button>
                             -->
+
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
