--- a/youthtransition/pages/ya-health.html
+++ b/youthtransition/pages/ya-health.html
@@ -243,14 +243,18 @@
                                 Previous: Pregnant Parenting
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Pregnant Parenting</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Pregnant Parenting
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-relationships.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Relationships
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Relationships</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Relationships
+                            </button>
                             -->
 
                         </form>
