--- a/youthtransition/pages/ya-housing.html
+++ b/youthtransition/pages/ya-housing.html
@@ -440,19 +440,24 @@
                             </div> <!-- form-row -->
 
                             <hr/>
+
                             <a class="btn btn-outline-primary float-left" href="./ya-demographics.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Previous: Demographics
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Demographics
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-education.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Education
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Education</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Education
+                            </button>
                             -->
 
                         </form>
