--- a/youthtransition/pages/ya-lifeskills.html
+++ b/youthtransition/pages/ya-lifeskills.html
@@ -446,14 +446,18 @@
                                 Previous: Criminal Justice System
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Criminal Justice System</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Criminal Justice System
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-stipends.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Stipends
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Stipends</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Stipends
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
