--- a/youthtransition/pages/ya-personal.html
+++ b/youthtransition/pages/ya-personal.html
@@ -330,15 +330,19 @@
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
                             <button type="submit" class="btn btn-outline-primary float-right" >
-                                Next: Continuing Support & Services</button>
+                                Next: Continuing Support & Services
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-goalsandactions.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Goals & Actions
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Goals & Actions</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Goals & Actions
+                            </button>
                             -->
+
                         </form>
                         <!-- #EndLibraryItem -->
                     </div> <!-- col-xs-12 -->
