--- a/youthtransition/pages/ya-placementandsafety.html
+++ b/youthtransition/pages/ya-placementandsafety.html
@@ -489,14 +489,18 @@
                                 Previous: Social Interests
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Social Interests</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Social Interests
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-pregnantparenting.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Pregnant Parenting
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Pregnant Parenting</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Pregnant Parenting
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
