--- a/youthtransition/pages/ya-pregnantparenting.html
+++ b/youthtransition/pages/ya-pregnantparenting.html
@@ -294,14 +294,18 @@
                                 Previous: Placement & Safety
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Placement & Safety
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-health.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Health
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Health</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Health
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
