--- a/youthtransition/pages/ya-receiveddocuments.html
+++ b/youthtransition/pages/ya-receiveddocuments.html
@@ -380,14 +380,18 @@
                                 Previous: Goals & Actions
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Goals & Actions</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Goals & Actions
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-reviewandsign.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Review & Sign
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Stipends</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Review & Sign
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
