--- a/youthtransition/pages/ya-relationships.html
+++ b/youthtransition/pages/ya-relationships.html
@@ -431,14 +431,18 @@
                                 Previous: Health
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Health</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Health
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-criminaljusticesystem.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Criminal Justice System
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Criminal Justice System</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Criminal Justice System
+                            </button>
                             -->
 
                         </form>
