--- a/youthtransition/pages/ya-reviewandsign.html
+++ b/youthtransition/pages/ya-reviewandsign.html
@@ -380,14 +380,18 @@
                                 Previous: Received Documents
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Goals & Actions</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Received Documents
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="#">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Submit Form
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Submit Form</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Submit Form
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
