--- a/youthtransition/pages/ya-socialinterests.html
+++ b/youthtransition/pages/ya-socialinterests.html
@@ -324,14 +324,18 @@
                                 Previous: Employment
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Housing</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Employment
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-placementandsafety.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Placement and Safety
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Placement & Safety</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Placement & Safety
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
