--- a/youthtransition/pages/ya-stipends.html
+++ b/youthtransition/pages/ya-stipends.html
@@ -329,14 +329,18 @@
                                 Previous: Life Skills
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Life Skills</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Previous: Life Skills
+                            </button>
                             -->
                             <a class="btn btn-outline-primary float-right" href="./ya-continuingsupportservices.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
                                 Next: Continuing Support & Services
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
-                            <button type="submit" class="btn btn-outline-primary float-right" >Next: Continuing Support & Services</button>
+                            <button type="submit" class="btn btn-outline-primary float-right" >
+                                Next: Continuing Support & Services
+                            </button>
                             -->
                         </form>
                         <!-- #EndLibraryItem -->
